Minor changes to the menu on mobile

--- a/contact.html
+++ b/contact.html
@@ -80,11 +80,12 @@
                     <li class="nav-item"><a class="nav-link py-2" href="sermons.html">Sermons</a></li>
                     <li class="nav-item"><a class="nav-link py-2" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link py-2" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link py-2" href="donate.html">Donate</a></li>
                 </ul>
 
                 <!-- social bottom -->
-                <hr style="height:0;" class="my-4 p-0" />
-                <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4" href="#">Donate</a>
+                <!-- <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4" href="#">Donate</a>
+                <hr style="height:0;" class="mt-4 mb-5 p-0" /> -->
                 <hr style="height:0;" class="mt-4 mb-5 p-0" />
                 <div class="mt-auto text-center">
 
@@ -133,13 +134,14 @@
                                     <div id="error_email" class="error" style="display:none;">Please check your email
                                     </div>
                                     <input type="email" class="form-control" name="email" id="email"
-                                        placeholder="Your email" required 
+                                        placeholder="Your email" required
                                         style="font-size:2rem;border:none !important;background:none !important;outline:none !important;box-shadow: none !important;border-bottom:1px solid #ccc !important;">
 
                                     <div id="error_message" class="error" style="display:none;">Please check your
                                         message</div>
                                     <textarea cols="10" rows="8" name="message" id="message" class="form-control"
-                                        placeholder="Your message" required style="font-size:2rem;resize:none;"></textarea>
+                                        placeholder="Your message" required
+                                        style="font-size:2rem;resize:none;"></textarea>
 
                                     <div id="mail_success" class="success" style="display:none;">Your message
                                         has been sent.</div>
@@ -160,7 +162,8 @@
                                             <span class="close">&times;</span>
                                         </div>
                                         <div class="modal-body">
-                                            <p style="font-size:1.5rem;" id="modal-message">Your message has been sent!</p>
+                                            <p style="font-size:1.5rem;" id="modal-message">Your message has been sent!
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -228,19 +231,19 @@
                     </div>
                     <div class="col-md-4">
                         <div class="social-icons">
-                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                        class="fa fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-instagram"></i></a>
-                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-youtube-play"></i></a>
-                                <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
-                                <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
-                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                        class="fa fa-google"></i></a>
-                                <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
-                                        class="fa fa-envelope-o"></i></a>
-                            </div>
+                            <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
+                                    class="fa fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
+                                    class="fa fa-youtube-play"></i></a>
+                            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                            <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
+                            <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
+                                    class="fa fa-google"></i></a>
+                            <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
+                                    class="fa fa-envelope-o"></i></a>
+                        </div>
                     </div>
                     <div class="col-md-4">
                         <nav>
