--- a/donate.html
+++ b/donate.html
@@ -80,14 +80,14 @@
                     <li class="nav-item"><a class="nav-link py-2" href="sermons.html">Sermons</a></li>
                     <li class="nav-item"><a class="nav-link py-2" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link py-2" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link py-2" href="donate.html">Donate</a></li>
                 </ul>
 
                 <!-- social bottom -->
                 <hr style="height:0;" class="my-4 p-0" />
-                <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4" href="#">Donate</a>
-                <hr style="height:0;" class="mt-4 mb-5 p-0" />
+                <!-- <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4" href="#">Donate</a>
+                <hr style="height:0;" class="mt-4 mb-5 p-0" /> -->
                 <div class="mt-auto text-center">
-
                     <div class="d-flex justify-content-center gap-4 fs-4">
                         <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
                                 class="fa fa-facebook"></i></a>
