--- a/events.html
+++ b/events.html
@@ -83,11 +83,12 @@
                     <li class="nav-item"><a class="nav-link py-2" href="sermons.html">Sermons</a></li>
                     <li class="nav-item"><a class="nav-link py-2" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link py-2" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link py-2" href="donate.html">Donate</a></li>
                 </ul>
 
                 <!-- social bottom -->
-                <hr style="height:0;" class="my-4 p-0" />
-                <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4" href="#">Donate</a>
+                <!-- <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4" href="#">Donate</a>
+                <hr style="height:0;" class="mt-4 mb-5 p-0" /> -->
                 <hr style="height:0;" class="mt-4 mb-5 p-0" />
                 <div class="mt-auto text-center">
 
@@ -285,19 +286,19 @@
                     </div>
                     <div class="col-md-4">
                         <div class="social-icons">
-                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                        class="fa fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-instagram"></i></a>
-                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-youtube-play"></i></a>
-                                <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
-                                <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
-                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                        class="fa fa-google"></i></a>
-                                <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
-                                        class="fa fa-envelope-o"></i></a>
-                            </div>
+                            <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
+                                    class="fa fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
+                                    class="fa fa-youtube-play"></i></a>
+                            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                            <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
+                            <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
+                                    class="fa fa-google"></i></a>
+                            <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
+                                    class="fa fa-envelope-o"></i></a>
+                        </div>
                     </div>
                     <div class="col-md-4">
                         <nav>
