--- a/gallery.html
+++ b/gallery.html
@@ -140,11 +140,12 @@
                     <li class="nav-item"><a class="nav-link py-2" href="sermons.html">Sermons</a></li>
                     <li class="nav-item"><a class="nav-link py-2" href="gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link py-2" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link py-2" href="donate.html">Donate</a></li>
                 </ul>
 
                 <!-- social bottom -->
-                <hr style="height:0;" class="my-4 p-0" />
-                <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4" href="#">Donate</a>
+                <!-- <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4" href="#">Donate</a>
+                <hr style="height:0;" class="mt-4 mb-5 p-0" /> -->
                 <hr style="height:0;" class="mt-4 mb-5 p-0" />
                 <div class="mt-auto text-center">
 
@@ -272,45 +273,44 @@
     <!-- content close -->
     <!-- footer begin -->
     <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        &copy; Copyright 2025 - The Leaf Church by
-                        <a href="https://campbellscode.com" target="_blank" rel="noopener noreferrer">
-                            Campbell's Code
-                        </a>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="social-icons">
-                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                        class="fa fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-instagram"></i></a>
-                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-youtube-play"></i></a>
-                                <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
-                                <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
-                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                        class="fa fa-google"></i></a>
-                                <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
-                                        class="fa fa-envelope-o"></i></a>
-                            </div>
-                    </div>
-                    <div class="col-md-4">
-                        <nav>
-                            <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="events.html">Events</a></li>
-                                <li><a href="sermons.html">Sermons</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="donate.html">Donate</a></li>
-                            </ul>
-                        </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    &copy; Copyright 2025 - The Leaf Church by
+                    <a href="https://campbellscode.com" target="_blank" rel="noopener noreferrer">
+                        Campbell's Code
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <div class="social-icons">
+                        <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
+                                class="fa fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
+                                class="fa fa-youtube-play"></i></a>
+                        <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                        <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
+                        <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
+                                class="fa fa-google"></i></a>
+                        <a href="mailto:theleafchurch@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <nav>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="events.html">Events</a></li>
+                            <li><a href="sermons.html">Sermons</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="donate.html">Donate</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-        </footer>
+        </div>
+    </footer>
     <!-- footer close -->
     </div>
 
