--- a/sermons.html
+++ b/sermons.html
@@ -12,7 +12,7 @@
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <link href="css/custom.css" rel="stylesheet" type="text/css">
 
-        <!-- CDNs -->
+    <!-- CDNs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
@@ -21,89 +21,88 @@
     <div id="preloader"></div>
     <div id="wrapper">
         <!-- header begin -->
-            <nav class="navbar navbar-expand-lg bg-white fixed-top shadow-sm border-0">
-                <div class="container">
-                    <!-- Brand -->
-                    <a class="navbar-brand d-flex align-items-center" href="index.html">
-                        <img src="img/logo/logo-new-2.png" alt="The Leaf Church" style="height:40px" class="me-2">
-                    </a>
+        <nav class="navbar navbar-expand-lg bg-white fixed-top shadow-sm border-0">
+            <div class="container">
+                <!-- Brand -->
+                <a class="navbar-brand d-flex align-items-center" href="index.html">
+                    <img src="img/logo/logo-new-2.png" alt="The Leaf Church" style="height:40px" class="me-2">
+                </a>
 
-                    <!-- Desktop links -->
-                    <div class="collapse navbar-collapse d-none d-lg-flex">
-                        <ul class="navbar-nav ms-auto align-items-center gap-2">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
-                            <li class="nav-item"><a class="nav-link" href="sermons.html">Sermons</a></li>
-                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                            <li class="nav-item"><a class="nav-link" href="donate.html">Donate</a></li>
-                            <li class="nav-item ms-2">
-                                <div class="d-flex align-items-center gap-3 fs-5">
-                                    <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                            class="fa fa-facebook"></i></a>
-                                    <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                            class="fa fa-instagram"></i></a>
-                                    <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                            class="fa fa-youtube-play"></i></a>
-                                    <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                            class="fa fa-google"></i></a>
-                                    <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
-                                            class="fa fa-envelope-o"></i></a>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <!-- Mobile toggler -->
-                    <button class="navbar-toggler border-0 d-lg-none" type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#mobileNav" aria-controls="mobileNav" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-            </nav>
-
-            <!-- Spacer under fixed nav -->
-            <!-- <div style="height:74px"></div> -->
-
-            <!-- Offcanvas mobile menu -->
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="mobileNav" aria-labelledby="mobileNavLabel"
-                data-bs-scroll="true" data-bs-backdrop="true">
-                <div class="offcanvas-header border-bottom">
-                    <h5 class="offcanvas-title" id="mobileNavLabel">Menu</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-
-                <div class="offcanvas-body d-flex flex-column">
-                    <ul class="navbar-nav fs-5">
-                        <li class="nav-item"><a class="nav-link py-2" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link py-2" href="events.html">Events</a></li>
-                        <li class="nav-item"><a class="nav-link py-2" href="sermons.html">Sermons</a></li>
-                        <li class="nav-item"><a class="nav-link py-2" href="gallery.html">Gallery</a></li>
-                        <li class="nav-item"><a class="nav-link py-2" href="contact.html">Contact</a></li>
+                <!-- Desktop links -->
+                <div class="collapse navbar-collapse d-none d-lg-flex">
+                    <ul class="navbar-nav ms-auto align-items-center gap-2">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
+                        <li class="nav-item"><a class="nav-link" href="sermons.html">Sermons</a></li>
+                        <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="donate.html">Donate</a></li>
+                        <li class="nav-item ms-2">
+                            <div class="d-flex align-items-center gap-3 fs-5">
+                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
+                                        class="fa fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
+                                        class="fa fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
+                                        class="fa fa-youtube-play"></i></a>
+                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
+                                        class="fa fa-google"></i></a>
+                                <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
+                                        class="fa fa-envelope-o"></i></a>
+                            </div>
+                        </li>
                     </ul>
+                </div>
 
-                    <!-- social bottom -->
-                    <hr style="height:0;" class="my-4 p-0" />
-                    <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4"
-                        href="#">Donate</a>
-                    <hr style="height:0;" class="mt-4 mb-5 p-0" />
-                    <div class="mt-auto text-center">
+                <!-- Mobile toggler -->
+                <button class="navbar-toggler border-0 d-lg-none" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#mobileNav" aria-controls="mobileNav" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+        </nav>
 
-                        <div class="d-flex justify-content-center gap-4 fs-4">
-                            <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                    class="fa fa-facebook"></i></a>
-                            <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                    class="fa fa-instagram"></i></a>
-                            <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                    class="fa fa-youtube-play"></i></a>
-                            <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                    class="fa fa-google"></i></a>
-                            <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
-                                    class="fa fa-envelope-o"></i></a>
-                        </div>
+        <!-- Spacer under fixed nav -->
+        <!-- <div style="height:74px"></div> -->
+
+        <!-- Offcanvas mobile menu -->
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="mobileNav" aria-labelledby="mobileNavLabel"
+            data-bs-scroll="true" data-bs-backdrop="true">
+            <div class="offcanvas-header border-bottom">
+                <h5 class="offcanvas-title" id="mobileNavLabel">Menu</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+
+            <div class="offcanvas-body d-flex flex-column">
+                <ul class="navbar-nav fs-5">
+                    <li class="nav-item"><a class="nav-link py-2" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link py-2" href="events.html">Events</a></li>
+                    <li class="nav-item"><a class="nav-link py-2" href="sermons.html">Sermons</a></li>
+                    <li class="nav-item"><a class="nav-link py-2" href="gallery.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link py-2" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link py-2" href="donate.html">Donate</a></li>
+                </ul>
+
+                <!-- social bottom -->
+                <!-- <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4" href="#">Donate</a>
+                <hr style="height:0;" class="mt-4 mb-5 p-0" /> -->
+                <hr style="height:0;" class="mt-4 mb-5 p-0" />
+                <div class="mt-auto text-center">
+
+                    <div class="d-flex justify-content-center gap-4 fs-4">
+                        <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
+                                class="fa fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
+                                class="fa fa-youtube-play"></i></a>
+                        <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
+                                class="fa fa-google"></i></a>
+                        <a href="mailto:theleafchurch@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a>
                     </div>
                 </div>
             </div>
+        </div>
         <!-- header close -->
 
         <!-- subheader begin -->
@@ -186,19 +185,19 @@
                     </div>
                     <div class="col-md-4">
                         <div class="social-icons">
-                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                        class="fa fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-instagram"></i></a>
-                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-youtube-play"></i></a>
-                                <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
-                                <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
-                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                        class="fa fa-google"></i></a>
-                                <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
-                                        class="fa fa-envelope-o"></i></a>
-                            </div>
+                            <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
+                                    class="fa fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
+                                    class="fa fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
+                                    class="fa fa-youtube-play"></i></a>
+                            <!-- <a href="#"><i class="fa fa-twitter"></i></a> -->
+                            <!-- <a href="#"><i class="fa fa-rss"></i></a> -->
+                            <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
+                                    class="fa fa-google"></i></a>
+                            <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
+                                    class="fa fa-envelope-o"></i></a>
+                        </div>
                     </div>
                     <div class="col-md-4">
                         <nav>
@@ -238,7 +237,7 @@
 
     <script src="js/wow.min.js"></script>
     <script src="https://apis.google.com/js/platform.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="js/custom.js"></script>
 
