Minor cosmetic changes

--- a/events.html
+++ b/events.html
@@ -169,7 +169,7 @@
                             <a href="#">
                                 <h3>Wednesday Service</h3>
                             </a>
-                            <span class="text">Experience God’s presence and community at our Sunday service.
+                            <span class="text">Experience God’s presence and community at our Wednesday service.
                                 Following worship, we share a meal
                                 together — building friendships, encouraging one another, and celebrating God’s
                                 goodness.
@@ -194,10 +194,9 @@
                             <a href="#">
                                 <h3>Bible Study</h3>
                             </a>
-                            <span class="text">Experience God’s presence and community at our Sunday service.
-                                Following worship, we share a meal
-                                together — building friendships, encouraging one another, and celebrating God’s
-                                goodness.
+                            <span class="text">Join us every Friday as we dive into God’s Word together, grow in
+                                        faith, and build meaningful
+                                        fellowship. Come early for pizza and snacks! All are welcome!
                             </span>
                         </div>
                     </div>
