--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 data-start="400" data-easing="easeInOutCubic" data-endspeed="300">
                             </div>
 
-                            <div class="tp-caption caption-wrapper tp-resizeme" data-x="600" data-y="140"
+                            <div style="border-right: 2px solid #58ba01;border-bottom: 2px solid #58ba01;" class="tp-caption caption-wrapper tp-resizeme" data-x="600" data-y="140"
                                 data-whitespace="normal" data-start="500" data-speed="800" data-easing="easeOutQuad">
 
                                 <div class="caption-line1">PROVERBS</div>
@@ -143,7 +143,7 @@
                             </div>
 
                             <!-- ✅ One wrapper caption -->
-                            <div class="tp-caption caption-wrapper tp-resizeme" data-x="600" data-y="140"
+                            <div style="border-left: 2px solid #58ba01;border-top: 2px solid #58ba01;" class="tp-caption caption-wrapper tp-resizeme" data-x="600" data-y="140"
                                 data-whitespace="normal" data-start="500" data-speed="800" data-easing="easeOutQuad">
 
                                 <div class="caption-line1">PUT YOUR FAITH</div>
@@ -167,7 +167,7 @@
                             </div>
 
                             <!-- ✅ Grouped caption wrapper -->
-                            <div class="tp-caption tp-resizeme caption-wrapper" data-x="600" data-y="140"
+                            <div style="border-right: 2px solid #58ba01;border-bottom: 2px solid #58ba01;" class="tp-caption tp-resizeme caption-wrapper" data-x="600" data-y="140"
                                 data-start="600" data-speed="800" data-easing="easeInOutCubic" data-whitespace="normal"
                                 data-width="auto" data-height="auto">
 
@@ -232,7 +232,7 @@
                                         <h3>Wednesday Worship</h3>
                                     </a> -->
                                     <h3>Wednesday Worship</h3>
-                                    <span class="desc">Experience God’s presence and community at our Sunday service.
+                                    <span class="desc">Experience God’s presence and community at our Wednesday service.
                                         Following worship, we share a meal
                                         together — building friendships, encouraging one another, and celebrating God’s
                                         goodness.
