Fixed gallery issues

--- a/donate.html
+++ b/donate.html
@@ -132,7 +132,7 @@
                             <h1 class="fw-bold text-center">Cash App</h1>
                             <p class="text-center" style="font-size: 2rem;">Send a donation instantly through Cash App.
                             </p>
-                            <a href="https://cash.app/" target="_blank" class="btn btn-cashapp w-100"
+                            <a href="https://cash.app/TheLeafChurch" target="_blank" class="btn btn-cashapp w-100"
                                 style="font-size: 1.5rem;">Donate via Cash App</a>
                         </div>
                     </div>
