Minor cosmetic changes to footer

--- a/events.html
+++ b/events.html
@@ -278,7 +278,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        &copy; Copyright 2025 - The Leaf Church by
+                        &copy; Copyright 2025 - The Leaf Church |
                         <a href="https://campbellscode.com" target="_blank" rel="noopener noreferrer">
                             Campbell's Code
                         </a>
