--- a/donate.html
+++ b/donate.html
@@ -140,7 +140,7 @@
 
                 <h2 style="margin-top: 50px;margin-bottom: 50px;;">Other Ways To Support Us</h2>
                 <div class="row">
-                    <h1 class="fw-bold">Kroger Community Rewards</h1>
+                    <!-- <h1 class="fw-bold">Kroger Community Rewards</h1> -->
                 </div>
             </div>            
         </div>
