--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <!-- CDNs -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -128,20 +128,37 @@
                         <div id="contact-form-wrapper">
                             <div class="contact_form_holder">
                                 <form id="contact" class="row" name="form1" method="post" action="">
-                                    <input type="text" class="form-control" name="name" id="name"
-                                        placeholder="Your name" required style="font-size:2rem;">
+                                    <!-- Name -->
+                                    <div style="position:relative;">
+                                        <i class="fa fa-user"
+                                            style="position:absolute;left:10px;top:50%;transform:translateY(-50%);color:black;font-size:1.9rem;"></i>
+                                        <input type="text" class="form-control" name="name" id="name"
+                                            placeholder="Your name" required style="font-size:2rem;padding-left:40px;">
+                                    </div>
 
                                     <div id="error_email" class="error" style="display:none;">Please check your email
                                     </div>
-                                    <input type="email" class="form-control" name="email" id="email"
-                                        placeholder="Your email" required
-                                        style="font-size:2rem;border:none !important;background:none !important;outline:none !important;box-shadow: none !important;border-bottom:1px solid #ccc !important;">
+
+                                    <!-- Email -->
+                                    <div style="position:relative;">
+                                        <i class="fa fa-envelope"
+                                            style="position:absolute;left:10px;top:50%;transform:translateY(-50%);color:black;font-size:1.8rem;"></i>
+                                        <input type="email" class="form-control" name="email" id="email"
+                                            placeholder="Your email" required
+                                            style="font-size:2rem;padding-left:40px;border:none !important;background:none !important;outline:none !important;box-shadow:none !important;border-bottom:1px solid #ccc !important;">
+                                    </div>
 
                                     <div id="error_message" class="error" style="display:none;">Please check your
                                         message</div>
-                                    <textarea cols="10" rows="8" name="message" id="message" class="form-control"
-                                        placeholder="Your message" required
-                                        style="font-size:2rem;resize:none;"></textarea>
+
+                                    <!-- Message -->
+                                    <div style="position:relative;">
+                                        <i class="fa fa-comment"
+                                            style="position:absolute;left:10px;top:37px;color:black;font-size:1.8rem;"></i>
+                                        <textarea cols="10" rows="8" name="message" id="message" class="form-control"
+                                            placeholder="Your message" required
+                                            style="font-size:2rem;padding-left:40px;resize:none;"></textarea>
+                                    </div>
 
                                     <div id="mail_success" class="success" style="display:none;">Your message
                                         has been sent.</div>
