Imroved menu links

--- a/events.html
+++ b/events.html
@@ -41,17 +41,17 @@
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="donate.html">Donate</a></li>
                         <li class="nav-item ms-2">
-                            <div class="d-flex align-items-center gap-3 fs-5">
-                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                        class="fa fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-instagram"></i></a>
-                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-youtube-play"></i></a>
-                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                        class="fa fa-google"></i></a>
-                                <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
-                                        class="fa fa-envelope-o"></i></a>
+                            <div class="d-flex align-items-center gap-4">
+                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank">
+                                    <i class="fa fa-facebook" style="font-size: 2rem;"></i></a>
+                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank">
+                                    <i class="fa fa-instagram" style="font-size: 2rem;"></i></a>
+                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank">
+                                    <i class="fa fa-youtube-play" style="font-size: 2rem;"></i></a>
+                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank">
+                                    <i class="fa fa-google" style="font-size: 2rem;"></i></a>
+                                <a href="mailto:theleafchurch@gmail.com" target="_blank">
+                                    <i class="fa fa-envelope-o" style="font-size: 2rem;"></i></a>
                             </div>
                         </li>
                     </ul>
@@ -92,16 +92,17 @@
                 <hr style="height:0;" class="mt-4 mb-5 p-0" />
                 <div class="mt-auto text-center">
 
-                    <div class="d-flex justify-content-center gap-4 fs-4">
-                        <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                class="fa fa-instagram"></i></a>
-                        <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                class="fa fa-youtube-play"></i></a>
-                        <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                class="fa fa-google"></i></a>
-                        <a href="mailto:theleafchurch@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a>
+                    <div class="d-flex justify-content-center gap-4">
+                        <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank">
+                            <i class="fa fa-facebook" style="font-size: 2rem;"></i></a>
+                        <a href="https://www.instagram.com/theleafchurchcincy" target="_blank">
+                            <i class="fa fa-instagram" style="font-size: 2rem;"></i></a>
+                        <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank">
+                            <i class="fa fa-youtube-play" style="font-size: 2rem;"></i></a>
+                        <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank">
+                            <i class="fa fa-google" style="font-size: 2rem;"></i></a>
+                        <a href="mailto:theleafchurch@gmail.com" target="_blank">
+                            <i class="fa fa-envelope-o" style="font-size: 2rem;"></i></a>
                     </div>
                 </div>
             </div>
@@ -195,8 +196,8 @@
                                 <h3>Bible Study</h3>
                             </a>
                             <span class="text">Join us every Friday as we dive into God’s Word together, grow in
-                                        faith, and build meaningful
-                                        fellowship. Come early for pizza and snacks! All are welcome!
+                                faith, and build meaningful
+                                fellowship. Come early for pizza and snacks! All are welcome!
                             </span>
                         </div>
                     </div>
