--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="donate.html">Donate</a></li>
                         <li class="nav-item ms-2">
-                            <div class="d-flex align-items-center gap-3 fs-5">
-                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                        class="fa fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-instagram"></i></a>
-                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-youtube-play"></i></a>
-                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                        class="fa fa-google"></i></a>
-                                <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
-                                        class="fa fa-envelope-o"></i></a>
+                            <div class="d-flex align-items-center gap-4">
+                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank">
+                                    <i class="fa fa-facebook" style="font-size: 2rem;"></i></a>
+                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank">
+                                    <i class="fa fa-instagram" style="font-size: 2rem;"></i></a>
+                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank">
+                                    <i class="fa fa-youtube-play" style="font-size: 2rem;"></i></a>
+                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank">
+                                    <i class="fa fa-google" style="font-size: 2rem;"></i></a>
+                                <a href="mailto:theleafchurch@gmail.com" target="_blank">
+                                    <i class="fa fa-envelope-o" style="font-size: 2rem;"></i></a>
                             </div>
                         </li>
                     </ul>
@@ -139,16 +139,17 @@
                 <hr style="height:0;" class="mt-4 mb-5 p-0" />
                 <div class="mt-auto text-center">
 
-                    <div class="d-flex justify-content-center gap-4 fs-4">
-                        <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                class="fa fa-instagram"></i></a>
-                        <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                class="fa fa-youtube-play"></i></a>
-                        <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                class="fa fa-google"></i></a>
-                        <a href="mailto:theleafchurch@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a>
+                    <div class="d-flex justify-content-center gap-4">
+                        <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank">
+                            <i class="fa fa-facebook" style="font-size: 2rem;"></i></a>
+                        <a href="https://www.instagram.com/theleafchurchcincy" target="_blank">
+                            <i class="fa fa-instagram" style="font-size: 2rem;"></i></a>
+                        <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank">
+                            <i class="fa fa-youtube-play" style="font-size: 2rem;"></i></a>
+                        <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank">
+                            <i class="fa fa-google" style="font-size: 2rem;"></i></a>
+                        <a href="mailto:theleafchurch@gmail.com" target="_blank">
+                            <i class="fa fa-envelope-o" style="font-size: 2rem;"></i></a>
                     </div>
                 </div>
             </div>
@@ -171,7 +172,8 @@
                                 data-start="400" data-easing="easeInOutCubic" data-endspeed="300">
                             </div>
 
-                            <div style="border-right: 2px solid #58ba01;border-bottom: 2px solid #58ba01;" class="tp-caption caption-wrapper tp-resizeme" data-x="600" data-y="140"
+                            <div style="border-right: 2px solid #58ba01;border-bottom: 2px solid #58ba01;"
+                                class="tp-caption caption-wrapper tp-resizeme" data-x="600" data-y="140"
                                 data-whitespace="normal" data-start="500" data-speed="800" data-easing="easeOutQuad">
 
                                 <div class="caption-line1">PROVERBS</div>
@@ -191,7 +193,8 @@
                             </div>
 
                             <!-- ✅ One wrapper caption -->
-                            <div style="border-left: 2px solid #58ba01;border-top: 2px solid #58ba01;" class="tp-caption caption-wrapper tp-resizeme" data-x="600" data-y="140"
+                            <div style="border-left: 2px solid #58ba01;border-top: 2px solid #58ba01;"
+                                class="tp-caption caption-wrapper tp-resizeme" data-x="600" data-y="140"
                                 data-whitespace="normal" data-start="500" data-speed="800" data-easing="easeOutQuad">
 
                                 <div class="caption-line1">PUT YOUR FAITH</div>
@@ -215,7 +218,8 @@
                             </div>
 
                             <!-- ✅ Grouped caption wrapper -->
-                            <div style="border-right: 2px solid #58ba01;border-bottom: 2px solid #58ba01;" class="tp-caption tp-resizeme caption-wrapper" data-x="600" data-y="140"
+                            <div style="border-right: 2px solid #58ba01;border-bottom: 2px solid #58ba01;"
+                                class="tp-caption tp-resizeme caption-wrapper" data-x="600" data-y="140"
                                 data-start="600" data-speed="800" data-easing="easeInOutCubic" data-whitespace="normal"
                                 data-width="auto" data-height="auto">
 
