--- a/donate.html
+++ b/donate.html
@@ -38,17 +38,17 @@
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="donate.html">Donate</a></li>
                         <li class="nav-item ms-2">
-                            <div class="d-flex align-items-center gap-3 fs-5">
-                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                        class="fa fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-instagram"></i></a>
-                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                        class="fa fa-youtube-play"></i></a>
-                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                        class="fa fa-google"></i></a>
-                                <a href="mailto:theleafchurch@gmail.com" target="_blank"><i
-                                        class="fa fa-envelope-o"></i></a>
+                            <div class="d-flex align-items-center gap-4">
+                                <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank">
+                                    <i class="fa fa-facebook" style="font-size: 2rem;"></i></a>
+                                <a href="https://www.instagram.com/theleafchurchcincy" target="_blank">
+                                    <i class="fa fa-instagram" style="font-size: 2rem;"></i></a>
+                                <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank">
+                                    <i class="fa fa-youtube-play" style="font-size: 2rem;"></i></a>
+                                <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank">
+                                    <i class="fa fa-google" style="font-size: 2rem;"></i></a>
+                                <a href="mailto:theleafchurch@gmail.com" target="_blank">
+                                    <i class="fa fa-envelope-o" style="font-size: 2rem;"></i></a>
                             </div>
                         </li>
                     </ul>
@@ -88,16 +88,17 @@
                 <!-- <a style="width:50px;" class="btn btn-success w-100 rounded-pill text-white my-4" href="#">Donate</a>
                 <hr style="height:0;" class="mt-4 mb-5 p-0" /> -->
                 <div class="mt-auto text-center">
-                    <div class="d-flex justify-content-center gap-4 fs-4">
-                        <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank"><i
-                                class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/theleafchurchcincy" target="_blank"><i
-                                class="fa fa-instagram"></i></a>
-                        <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank"><i
-                                class="fa fa-youtube-play"></i></a>
-                        <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank"><i
-                                class="fa fa-google"></i></a>
-                        <a href="mailto:theleafchurch@gmail.com" target="_blank"><i class="fa fa-envelope-o"></i></a>
+                    <div class="d-flex justify-content-center gap-4">
+                        <a href="https://www.facebook.com/profile.php?id=61556350205048" target="_blank">
+                            <i class="fa fa-facebook" style="font-size: 2rem;"></i></a>
+                        <a href="https://www.instagram.com/theleafchurchcincy" target="_blank">
+                            <i class="fa fa-instagram" style="font-size: 2rem;"></i></a>
+                        <a href="https://www.youtube.com/@theleafchurchcincy" target="_blank">
+                            <i class="fa fa-youtube-play" style="font-size: 2rem;"></i></a>
+                        <a href="https://share.google/AYmQxvqO5LvwswVBR" target="_blank">
+                            <i class="fa fa-google" style="font-size: 2rem;"></i></a>
+                        <a href="mailto:theleafchurch@gmail.com" target="_blank">
+                            <i class="fa fa-envelope-o" style="font-size: 2rem;"></i></a>
                     </div>
                 </div>
             </div>
@@ -142,7 +143,7 @@
                 <div class="row">
                     <!-- <h1 class="fw-bold">Kroger Community Rewards</h1> -->
                 </div>
-            </div>            
+            </div>
         </div>
         <!-- content close -->
 
