Added browser tab titles, favicon, social preview, etc

--- a/events.html
+++ b/events.html
@@ -3,10 +3,38 @@
 
 <head>
     <meta charset="utf-8">
-    <title>The Leaf Church</title>
+    <title>The Leaf Church | Events</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+
+    <meta name="description"
+        content="We are Apostolic in doctrine and Pentecostal in experience. We are here to offer biblically sound healing, beginning with an Acts 2:38–39 experience: repentance, baptism in the name of Jesus Christ, and the infilling of the Holy Ghost with the evidence of speaking in other tongues as the Spirit gives utterance. We believe in one God, and His name is Jesus Christ. We also believe in a lifestyle of holiness and separation from the world unto the Lord.">
+    <meta name="author" content="The Leaf Church">
+
+    <!-- ========== FAVICON (Browser Tab Icon) ========== -->
+    <link rel="icon" href="/img/icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/icons/favicon.ico" type="image/x-icon">
+
+    <!-- For modern browsers -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/fav-icon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/fav-icon-16.png">
+
+    <!-- For Apple devices -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png">
+
+    <!-- ========== SOCIAL MEDIA PREVIEW (Open Graph + Twitter Cards) ========== -->
+    <meta property="og:title" content="The Leaf Church | Events">
+    <meta property="og:description"
+        content="We are Apostolic in doctrine and Pentecostal in experience. We are here to offer biblically sound healing, beginning with an Acts 2:38–39 experience: repentance, baptism in the name of Jesus Christ, and the infilling of the Holy Ghost with the evidence of speaking in other tongues as the Spirit gives utterance. We believe in one God, and His name is Jesus Christ. We also believe in a lifestyle of holiness and separation from the world unto the Lord.">
+    <meta property="og:image" content="https://theleafchurchcincy.org/img/icons/social-preview-image.jpg">
+    <meta property="og:url" content="https://theleafchurchcincy.org/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="The Leaf Church | Events">
+    <meta name="twitter:description"
+        content="We are Apostolic in doctrine and Pentecostal in experience. We are here to offer biblically sound healing, beginning with an Acts 2:38–39 experience: repentance, baptism in the name of Jesus Christ, and the infilling of the Holy Ghost with the evidence of speaking in other tongues as the Spirit gives utterance. We believe in one God, and His name is Jesus Christ. We also believe in a lifestyle of holiness and separation from the world unto the Lord.">
+    <meta name="twitter:image" content="https://theleafchurchcincy.org/img/icons/social-preview-image.jpg">
 
     <!-- LOAD CSS FILES -->
     <link href="css/main.css" rel="stylesheet" type="text/css">
