Hid the latest sermons section from the home page

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             <!-- section close -->
 
             <!-- section begin -->
-            <section id="latest-sermons">
+            <section id="latest-sermons" style="display: none !important;">
                 <div class="container">
                     <div class="row">
                         <div class="text-center wow fadeInUp">
@@ -455,7 +455,6 @@
 
                         <div id="sermonsGrid" class="sermons__grid"></div>
 
-                        <!-- Modal player -->
                         <div id="sermonModal" class="sermons__modal" aria-hidden="true">
                             <div class="sermons__dialog" role="dialog" aria-modal="true" aria-label="Sermon video">
                                 <button class="sermons__close" aria-label="Close">&times;</button>
@@ -464,31 +463,7 @@
                                         allow="autoplay; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                                 </div>
                             </div>
-                        </div>
-                        <!-- <div class="col-md-10 col-md-offset-1">
-                            <div class="custom-col-3 wow flipInX">
-                                <div class="left-col">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/c6fNGfpRb-k"
-                                        title="Marred Pride" frameborder="0"
-                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen>
-                                    </iframe>
-                                </div>
-                                <div class="mid-col">
-                                    <a href="https://www.youtube.com/embed/c6fNGfpRb-k" target="_blank">
-                                        <h4>Marred Pride</h4>
-                                    </a>
-                                    <div class="details"><span>By <a href="#">John Rook</a>, February 08, 2017</span></div>
-                                    <span>November 3rd, 2025</span>
-                                </div>
-                                <div class="right-col">
-                                    <a href="https://www.youtube.com/embed/c6fNGfpRb-k" target="_blank"><i
-                                            class="fa fa-video-camera"></i></a>
-                                    <a href="#"><i class="fa fa-volume-up"></i></a>
-                                    <a href="#"><i class="fa fa-file-pdf-o"></i></a>
-                                </div>
-                            </div>                                
-                        </div> -->
+                        </div>                        
                     </div>
                 </div>
             </section>
