Updated contact info

--- a/contact.html
+++ b/contact.html
@@ -240,13 +240,14 @@
                             <div class="divider-line"></div>
 
                             <span class="title">Telephone:</span>
-                            <span class="phone-desktop">(513) 555-1234</span>
-                            <a class="phone-mobile" href="tel:+15135551234">(513) 555-1234</a>
+                            <span class="phone-desktop">(513) 444-5984</span>
+                            <a class="phone-mobile" href="tel:+15134445984">(513) 444-5984</a>
 
                             <div class="divider-line"></div>
 
                             <span class="title">Hours of Operation:</span>
                             <span>Service - Every Sunday 11AM & 6PM</span><br>
+                            <span>Service - Every Wednesday 7PM</span><br>
                             <span>Bible Study - Every Friday 7PM</span><br>
 
                             <div class="divider-line"></div>
