Updated some language

--- a/donate.html
+++ b/donate.html
@@ -169,7 +169,7 @@
                     </div>
                 </div>
 
-                <h2 style="margin-top: 50px;margin-bottom: 50px;;">Other Ways To Support Us</h2>
+                <h2 style="margin-top: 50px;margin-bottom: 50px;">Other Ways To Support Us</h2>
 
                 <!-- #region Kroger Community Rewards -->
                 <div class="row">
@@ -206,7 +206,7 @@
                                 <div class="cc-tab-pane active" id="cc-overview">
                                     <h4 class="fw-bold mb-2 cc-kroger-heading">About The Program</h4>
                                     <p style="font-size: 1.4rem" class="text-muted mb-4">
-                                        Turn everyday shopping into consistent support for your organization.
+                                        Turn everyday shopping into consistent support for our organization.
                                         When you link your Kroger Plus Card, a percentage of eligible
                                         purchases is donated at no extra cost to you!
                                     </p>
@@ -227,7 +227,7 @@
                                             <div class="cc-feature">
                                                 <div style="font-size: 1.5rem" class="cc-feature-title">No Extra Cost</div>
                                                 <div style="font-size: 1.4rem" class="cc-feature-text">
-                                                    Contributions come from Kroger, not you. Any transactions moving forward using the Shopper’s Card number 
+                                                    After linking your card, any transactions moving forward using the Shopper’s Card number 
                                                     associated with your digital account will be applied to the program, at no added cost to you. Kroger donates annually to 
                                                     participating organizations based on your percentage of spending as it relates to the total spending associated with all 
                                                     participating Kroger Community Rewards organizations.
